apps/staging/apisix/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "apisix-dashboard-ingress"
  namespace: ingress-apisix
  annotations:
    # kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-staging-dns"
    cert-manager.io/acme-challenge-type: dns01
spec:
  ingressClassName: apisix
  tls:
    - hosts:
        - dashboard.hetzner.vapepay.store
      secretName: apisix-dashboard-cert
  rules:
    - host: "dashboard.hetzner.vapepay.store"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "apisix-dashboard"
                port:
                  number: 80
